css/style.css
/* ... */
/* Sur chaque <li>, au survol de la souris: mettre le fond violet clair
*/
.c_section-fonctionnement ol li:hover {
  background: #f6ebff;
}

/* Pour chaque Picto:
  - mettre 1 marge interne Gauche & Droite à resp. 15px & 10px
  - mettre le texte en Gris
  - tailler le Picto
*/
.c_section-fonctionnement ol li .fa-tablet-alt,
.c_section-fonctionnement ol li .fa-list-ul,
.c_section-fonctionnement ol li .fa-store {
  padding-left: 15px;
  padding-right: 11px;
  /* MEN0909_debut : L'icône doit être grise et avoir la bonne taille */
  color: var(--couleur_texte_tertiaire);
  font-size: 19px;
  /* width: 5px; */
  /* MEN0909_fin */
  /* background-color: red; */
}

.ZZc_section-fonctionnement ol li .fa-tablet-alt {
  padding-left: 15px;
  margin-right: 10px;
  background-color: red;
}

.ZZc_section-fonctionnement__span-choisissez {
  background-color: green;
}

.ZZc_section-fonctionnement ol li .fa-list-ul {
  padding-left: 10px;
}

.ZZc_section-fonctionnement__span-composez {
  margin-left: -12px;
  display: flex;
  justify-content: right;
  /* margin-left: 30px; margin-rigth:30px; */
  width: 200px;
  margin: auto;
  background-color: pink;
}

/* Sur chaque <li>, au survol de la souris: mettre son Picto en violet */
.c_section-fonctionnement ol li:hover .fa-tablet-alt,
.c_section-fonctionnement ol li:hover .fa-list-ul,
.c_section-fonctionnement ol li:hover .fa-store {
  color: var(--couleur_primaire);
  /* red; TEST */
}

/* Avant le <li> (de <section>), créer du contenu  :
    - le contenu prend la valeur du compteur de <li>
    - faire le cercle de diamètre 20px (cf Projet2)
    - mettre le fond en violet & le numéro en Blanc
    - poser une marge externe gauche de -10px (pour décaler à gauche)
*/
.c_section-fonctionnement ol li:before {
  content: counter(li);
  /* cf. Projet2 remplacement du Picto evaluation */
  display: flex;
  align-items: center;
  justify-content: center;
  /* pour centrer le compteur */
  border-radius: 50%;
  /* cercle */
  /* diametre du cercle (40px - 20px) */

  /* MEN0909_debut : la pastille violet est plus grande et le chiffre légèrement plus petit */
  width: 27px;
  height: 27px;
  font-size: 14px;
  /* MEN0909_fin */

  background-color: var(--couleur_primaire);
  color: var(--couleur_texte_secondaire);

  margin-left: -10px;
}


/* Pour chaque <a> (de <section>) :
    - placer ses enfants (i.e Picto & libellé) en ligne & aux extrémités
    - tailler sa Largeur
    - oter le soulignement
    - mettre le Picto & libellé en noir & en gras
*/
.c_section-fonctionnement ol li a {
  display: flex;
  flex-direction: row;
  justify-content: space-around;
  width: 50%;
  /* 250px; */
  /* pour rendre elastic */

  text-decoration: none;
  color: var(--couleur_texte_primaire);
  font-weight: bold;
}

/* (index.html) Fin de <section> "Fonctionnement" ---------------------------------------------------------------------------- */

/* (index.html) <section> "restaurants" -------------------------------------------------------------------------------------- */

/* - placer ses enfants (i.e <Article>) sur 1 colonne aux extrémités 
   - tailler sa largeur
   - mettre le fond Gris
   - mettre 1 marge interne Haut & Bas de 45px
*/
.c_section-restaurants {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  width: 100%;
  background-color: var(--couleur_fond_secondaire);
  padding-top: 30px;
  padding-bottom: 40px;
}

/* Pour le <h2>: placer une marge externe gauche de 15px */
.c_section-restaurants h2 {
  margin-left: var(--section-restaurants_marge);
}

/* Concernant la section restaurants, pour chaque Article: 
  - mettre ses enfants en colonne (sauf: "Nouveau" & Picto "coeur")
  - tailler sa hauteur
  - poser 4 arrondis
  - poser une ombre noir
  - poser des marges externes à 15px
  - poser une position "relative" pour placer ses enfants "Nouveau" &  Picto évaluation ("coeur")
  - mettre le fond en Blanc

*/
.c_section-restaurants__article {
  display: flex;
  flex-direction: column;
  height: 250px;
  /* 1195px - 945px */
  border-radius: 20px;
  box-shadow: 2px 2px 12px -11px var(--couleur_fond_tertiaire);
  margin: 0 var(--section-restaurants_marge) var(--section-restaurants_marge) var(--section-restaurants_marge);
  /* haut droit bas gauche */

  position: relative;
  background-color: var(--couleur_fond_primaire);
}

/* Pour chaque <a>: 
    - oter le soulignement du lien
    - remplacer le bleu par du noir 
*/
.c_section-restaurants__article a {
  text-decoration: none;
  color: var(--couleur_texte_primaire);
}

/* Pour l'élément "Nouveau": 
  - tailler sa largeur & sa hauteur
  - mettre le fond en vert
  - mettre la couleur du Texte en vert foncé & en Gras
  - poser des marges internes
  - centrer son texte
  - le placer par rapport à son Père (i.e Article) à 15px à droite & à 15px en haut 
*/
.c_section-restaurants__article__span-nouveau {
  width: 80px;
  /* 345px - 265px */
  height: 30px;
  /* 985px - 955px */
  background-color: var(--couleur_tertiaire);
  color: #259D80;
  font-weight: bold;

  /* MEN0909_debut : l'étiquette nouveau a trop de marge -> bottom */
  /* padding: 5px; */
  /* padding-top: 5px;*/
  padding-bottom: 0px;
  line-height: 1.8;
  border-radius: 5px;
  /* MEN0909_fin */
  text-align: center;

  position: absolute;
  /* son Père : Article */
  right: 15px;
  /* 15px à droite par rapport à son Père (i.e Article) */
  top: 15px;
  /* 15px en haut par rapport à son Père (i.e Article) */
}

/* Pour chaque <img>: 
  - tailler sa largeur à 100%
  - tailler sa hauteur
  - poser 2 arrondis en haut 
*/
.c_section-restaurants__article img {
  width: 100%;
  height: 175px;
  /* 1120px - 845px */
  border-radius: 20px 20px 0px 0px;
}

/* Pour la description (i.e <h3> & <p>) :
  - remonter ses enfants
  - poser un décalage gauche
*/
.c_section-restaurants__article__div-description {
  line-height: 5px;
  padding-left: 10px;
}


.c_section-restaurants__article__div-description p {
  color: #303030;
}
/* ... */

